<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ucc_main_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Welcome to the UCC IT App"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnCourses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/courses"
        app:layout_constraintTop_toBottomOf="@id/txtHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnFaculty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/faculty_staff_directory"
        app:layout_constraintTop_toBottomOf="@id/btnCourses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnAdmissions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/admissions"
        app:layout_constraintTop_toBottomOf="@id/btnFaculty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnSocial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/social_media"
        app:layout_constraintTop_toBottomOf="@id/btnAdmissions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- FAB to Email HOD -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/contact_hod"
        android:src="@drawable/ic_email"
        app:tint="#FFD100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
